--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="/Assets/images/Tsedi.png" style="width:100%">
+  <img src="./Assets/images/Tsedi.png" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -57,7 +57,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Tsedenia Bogale</h1>
     <p>Web Developer</p>
-    <img src="/Assets/images/Tsedi.png" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="./Assets/images/Tsedi.png" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -145,11 +145,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
-    <img src="/Assets/images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="./Assets/images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Chris Fox.</span> CEO at Booz Allen Hamilton</p>
     <p>Tsedenia Bogale saved us from a web disaster.</p><br>
     
-    <img src="/Assets/images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="./Assets/images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Rebecca Flex.</span> CEO at Accenture</p>
     <p>No one is better than Tsedenia Bogale.</p>
   <!-- End About Section -->
@@ -163,15 +163,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/Assets/images/digital-marketing-meeting.jpg" style="width:100%">
-        <img src="/Assets/images/brand-awareness.22.png" style="width:100%">
-        <img src="/Assets/images/social-media-marketing.jpg" style="width:100%">
+        <img src="./Assets/images/digital-marketing-meeting.jpg" style="width:100%">
+        <img src="./Assets/images/brand-awareness.22.png" style="width:100%">
+        <img src="./Assets/images/social-media-marketing.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/Assets/images/online-reputation-management.jpg" style="width:100%">
-        <img src="Assets/images/search-engine-optimization.jpg" style="width:100%">
-        <img src="Assets/images/brand-awareness.22.png" style="width:100%">
+        <img src="./Assets/images/online-reputation-management.jpg" style="width:100%">
+        <img src="./Assets/images/search-engine-optimization.jpg" alt = "" style="width:100%">
+        <img src="./Assets/images/brand-awareness.22.png" alt = "" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
