index.html image update

--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half">
         <img src="./Assets/images/digital-marketing-meeting.jpg" style="width:100%">
         <img src="./Assets/images/brand-awareness.22.png" style="width:100%">
-        <img src="./Assets/images/social-media-marketing.jpg" style="width:100%">
+        <img src="./Assets/images/digital-marketing-meeting.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
         <img src="./Assets/images/online-reputation-management.jpg" style="width:100%">
         <img src="./Assets/images/search-engine-optimization.jpg" alt = "" style="width:100%">
-        <img src="./Assets/images/brand-awareness.22.png" alt = "" style="width:100%">
+        <img src="./Assets/images/social-media-marketing.jpg" alt = "" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
