Index.HTML update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="./Assets/images/Tsedi.png" style="width:100%">
+  <img src="./Assets/images/Tsedi.png" alt = "Image Tsedi" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -145,11 +145,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
-    <img src="./Assets/images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="./Assets/images/Booz Allen Hamilton CEO.jpg" alt="image of Booz Allen Hamilton CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Chris Fox.</span> CEO at Booz Allen Hamilton</p>
     <p>Tsedenia Bogale saved us from a web disaster.</p><br>
     
-    <img src="./Assets/images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="./Assets/images/Accenture CEO.jpg" alt="Image of Accenture CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Rebecca Flex.</span> CEO at Accenture</p>
     <p>No one is better than Tsedenia Bogale.</p>
   <!-- End About Section -->
@@ -158,20 +158,22 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
     <h2 class="w3-text-light-grey">My Works</h2>
+    <h4>sites developed</h4>
+    <p><a href="http://127.0.0.1:5500/index.html">Horiseon</a></p>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="./Assets/images/digital-marketing-meeting.jpg" style="width:100%">
-        <img src="./Assets/images/brand-awareness.22.png" style="width:100%">
-        <img src="./Assets/images/digital-marketing-meeting.jpg" style="width:100%">
+        <img src="./Assets/images/digital-marketing-meeting.jpg" alt = "Image of folks collaborating" style="width:100%">
+        <img src="./Assets/images/brand-awareness.22.png" alt = "image of Brand Awareness" style="width:100%">
+        <img src="./Assets/images/digital-marketing-meeting.jpg" alt = "Image of folks collaborating" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="./Assets/images/online-reputation-management.jpg" style="width:100%">
-        <img src="./Assets/images/search-engine-optimization.jpg" alt = "" style="width:100%">
-        <img src="./Assets/images/social-media-marketing.jpg" alt = "" style="width:100%">
+        <img src="./Assets/images/online-reputation-management.jpg" alt = "Image of man working on a laptop" style="width:100%">
+        <img src="./Assets/images/search-engine-optimization.jpg" alt = "Image of working desk with notebook, laptop and coffee" style="width:100%">
+        <img src="./Assets/images/social-media-marketing.jpg" alt = "Image of folks collaborating" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
