--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
     <img src="./Assets/images/Booz Allen Hamilton CEO.jpg" alt="image of Booz Allen Hamilton CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">Chris Fox.</span> CEO at Booz Allen Hamilton</p>
+    <p><span class="w3-large w3-margin-right">Horacio D. Rozanski,</span> CEO at Booz Allen Hamilton</p>
     <p>Tsedenia Bogale saved us from a web disaster.</p><br>
     
     <img src="./Assets/images/Accenture CEO.jpg" alt="Image of Accenture CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">Rebecca Flex.</span> CEO at Accenture</p>
+    <p><span class="w3-large w3-margin-right">Julie Sweet,</span> CEO at Accenture</p>
     <p>No one is better than Tsedenia Bogale.</p>
   <!-- End About Section -->
   </div>
