--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p><span class="w3-large w3-margin-right">Horacio D. Rozanski,</span> CEO at Booz Allen Hamilton</p>
     <p>Tsedenia Bogale saved us from a web disaster.</p><br>
     
-    <img src="./Assets/images/Accenture CEO.jpg" alt="Image of Accenture CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="./Assets/images/Accenture CEO.jpg" alt="image of Accenture CEO" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Julie Sweet,</span> CEO at Accenture</p>
     <p>No one is better than Tsedenia Bogale.</p>
   <!-- End About Section -->
